// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asFiltersByAlertTypeAndConsumer constructs filter for multiple alert types across authorized consumer 1`] = `
Object {
  "arguments": Array [
    Object {
      "arguments": Array [
        Object {
          "arguments": Array [
            Object {
              "type": "literal",
              "value": "alert.attributes.alertTypeId",
            },
            Object {
              "type": "literal",
              "value": "myAppAlertType",
            },
            Object {
              "type": "literal",
              "value": false,
            },
          ],
          "function": "is",
          "type": "function",
        },
        Object {
          "arguments": Array [
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "alerts",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myApp",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myOtherApp",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myAppWithSubFeature",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
          ],
          "function": "or",
          "type": "function",
        },
      ],
      "function": "and",
      "type": "function",
    },
    Object {
      "arguments": Array [
        Object {
          "arguments": Array [
            Object {
              "type": "literal",
              "value": "alert.attributes.alertTypeId",
            },
            Object {
              "type": "literal",
              "value": "myOtherAppAlertType",
            },
            Object {
              "type": "literal",
              "value": false,
            },
          ],
          "function": "is",
          "type": "function",
        },
        Object {
          "arguments": Array [
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "alerts",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myApp",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myOtherApp",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myAppWithSubFeature",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
          ],
          "function": "or",
          "type": "function",
        },
      ],
      "function": "and",
      "type": "function",
    },
    Object {
      "arguments": Array [
        Object {
          "arguments": Array [
            Object {
              "type": "literal",
              "value": "alert.attributes.alertTypeId",
            },
            Object {
              "type": "literal",
              "value": "mySecondAppAlertType",
            },
            Object {
              "type": "literal",
              "value": false,
            },
          ],
          "function": "is",
          "type": "function",
        },
        Object {
          "arguments": Array [
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "alerts",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myApp",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myOtherApp",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
            Object {
              "arguments": Array [
                Object {
                  "type": "literal",
                  "value": "alert.attributes.consumer",
                },
                Object {
                  "type": "literal",
                  "value": "myAppWithSubFeature",
                },
                Object {
                  "type": "literal",
                  "value": false,
                },
              ],
              "function": "is",
              "type": "function",
            },
          ],
          "function": "or",
          "type": "function",
        },
      ],
      "function": "and",
      "type": "function",
    },
  ],
  "function": "or",
  "type": "function",
}
`;

exports[`asFiltersByAlertTypeAndConsumer constructs filter for single alert type with multiple authorized consumer 1`] = `
Object {
  "arguments": Array [
    Object {
      "arguments": Array [
        Object {
          "type": "literal",
          "value": "alert.attributes.alertTypeId",
        },
        Object {
          "type": "literal",
          "value": "myAppAlertType",
        },
        Object {
          "type": "literal",
          "value": false,
        },
      ],
      "function": "is",
      "type": "function",
    },
    Object {
      "arguments": Array [
        Object {
          "arguments": Array [
            Object {
              "type": "literal",
              "value": "alert.attributes.consumer",
            },
            Object {
              "type": "literal",
              "value": "alerts",
            },
            Object {
              "type": "literal",
              "value": false,
            },
          ],
          "function": "is",
          "type": "function",
        },
        Object {
          "arguments": Array [
            Object {
              "type": "literal",
              "value": "alert.attributes.consumer",
            },
            Object {
              "type": "literal",
              "value": "myApp",
            },
            Object {
              "type": "literal",
              "value": false,
            },
          ],
          "function": "is",
          "type": "function",
        },
        Object {
          "arguments": Array [
            Object {
              "type": "literal",
              "value": "alert.attributes.consumer",
            },
            Object {
              "type": "literal",
              "value": "myOtherApp",
            },
            Object {
              "type": "literal",
              "value": false,
            },
          ],
          "function": "is",
          "type": "function",
        },
      ],
      "function": "or",
      "type": "function",
    },
  ],
  "function": "and",
  "type": "function",
}
`;

exports[`asFiltersByAlertTypeAndConsumer constructs filter for single alert type with single authorized consumer 1`] = `
Object {
  "arguments": Array [
    Object {
      "arguments": Array [
        Object {
          "type": "literal",
          "value": "alert.attributes.alertTypeId",
        },
        Object {
          "type": "literal",
          "value": "myAppAlertType",
        },
        Object {
          "type": "literal",
          "value": false,
        },
      ],
      "function": "is",
      "type": "function",
    },
    Object {
      "arguments": Array [
        Object {
          "type": "literal",
          "value": "alert.attributes.consumer",
        },
        Object {
          "type": "literal",
          "value": "myApp",
        },
        Object {
          "type": "literal",
          "value": false,
        },
      ],
      "function": "is",
      "type": "function",
    },
  ],
  "function": "and",
  "type": "function",
}
`;
